syntax = "proto3";
package gift;
option go_package = "proto/src";

message GetGiftRequest{
  string phoneNumber = 1;
  string code = 2;
}

message GetGiftResponse{
  int32 giftId = 1;
  int32 transactionId = 2;
  int32 amount = 3;
}

message CreateGiftRequest{
  int32 amount = 1;
  string code = 2;
  int32 batchSize = 3;
}

message CreateGiftResponse{

}


service GiftService {
  rpc GetGift(GetGiftRequest) returns (GetGiftResponse);
  rpc CreateGift(CreateGiftRequest) returns (CreateGiftResponse);
}